--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -22,7 +22,7 @@ jobs:
         dotnet-version: 8.0.x
     - name: Install dependencies
       run: dotnet restore
-      working-directory: scripts
+      working-directory: SeleniumCSharpNetCore/
     - name: Build
       run: dotnet build --no-restore
     - name: Test
