--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -28,3 +28,4 @@ jobs:
       working-directory: SeleniumCSharpNetCore/
     - name: Test
       run: dotnet test --no-build --verbosity normal
+      working-directory: SeleniumCSharpNetCore/
